# rende

./: .gitignore  README.md  appspec.yml  build.sh  buildspec.yml  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: go.yml  npm.yml  rust.yml  webpack.yml
public/: index.html
rende/: package-lock.json  package.json
scripts/: AppStart.sh  AppStop.sh
server/: .gitignore  Cargo.toml  go.mod  go.sum  main.go
server/auth/: cognito.go  info.go  login.go  register.go  supabase.go
server/db/: db.go
server/event/: event.go
server/org/: org.go
server/src/: club.rs  config.rs  database.rs  event.rs  handler.rs  location.rs  main.rs  model.rs  response.rs
sql/: create_db.sql  testdata.sql
src/: DashboardPage.tsx  EventCard.tsx  EventPage.tsx  EventTypes.ts  HomePage.tsx  LoginPage.tsx  NavBar.tsx  RegisterPage.tsx  SearchBar.tsx  SearchPage.tsx  WeeklyView.tsx  dev.tsx  index.css  index.ts  index.tsx
src/event/: EventCard.tsx  EventDisplay.tsx  EventTypes.ts  WeeklyCard.tsx
src/user/: DashboardPage.tsx  FirstLogin.tsx  LoginPage.tsx  RegisterPage.tsx  UserTypes.tsx
