[package]
name = "server"
version = "0.0.1"
authors = ["Addison Hart <tgr@tgrcode.com>"]
edition = "2021"
license = "MIT"

[dependencies]
#tokio = { version = "1", features = ["full"] }
#warp = { version = "0.3", features = ["compression"] }
actix-web = { version = "4.2.1", features = ["compress-gzip"] }
actix-files = "0.6.2"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.24"
futures = "0.3.27"
