[package]
name = "server"
version = "0.0.1"
authors = ["Addison Hart <tgr@tgrcode.com>"]
edition = "2021"
license = "MIT"

[dependencies]
#tokio = { version = "1", features = ["full"] }
#warp = { version = "0.3", features = ["compression"] }
actix-web = { version = "4.2.1", features = ["compress-gzip"] }
actix-files = "0.6.2"
actix-cors = "0.6.4"

diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.27"
jsonwebtoken = "8.3.0"
quote = "1.0.23"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
argon2 = "0.5.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }


serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
cargo-watch = "8.4.0"
